Fix further layout issues
In student-table, the buttons are finally displayed next to each other (because
the promise that loads the data also causes a fake resizing event that
adjusts the respective widths). Furthermore, the scrolling is now mostly
constricted to a div that wraps the table (this way, one does not scroll "past"
the navbar).

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -92,14 +92,6 @@ select.class-list {
 			padding: 5px 10px;
 		}
 	}
-	tr {
-		th:nth-child(1) {
-			min-width: 67px;
-		}
-		th:nth-child(2) {
-			min-width: 150px;
-		}
-	}
 }
 
 .footer {
@@ -192,4 +184,18 @@ th.placeholder {
 .fit-content {
 	width: 1%;
 	white-space: nowrap;
+}
+
+.absorb-width {
+	width: 100%;
+}
+
+#table-container {
+	width: 100%;
+	height: 80vh;
+	overflow: auto;
+}
+
+td.buttons {
+	display: flex;
 }
